scrollbar 1 fix

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ main{
 }
 
 footer{
-    height: 90px;
+    height: 85px;
     background-color: #222222;
     
 }
